Fix projects not stretching correctly

--- a/css/common.css
+++ b/css/common.css
@@ -300,7 +300,7 @@ footer {
 
 .row {
   width: 100%;
-   /*border: 1px solid red;*/
+  overflow: auto;/*Very important so that projects strectch even if figcaption stretch! */
 }
 
 .column-4 {
@@ -315,8 +315,6 @@ footer {
 .saran-wrap {
   width: 95%;
   margin: 0 auto;
-   /*border: 1px solid red;*/
-
 }
 
 
@@ -374,7 +372,7 @@ footer {
   }
 
   .column-4 {
-    width: 33.333333%;
+    width: 33.33333%;
     float: left;
   }
 
